--- a/index.html
+++ b/index.html
@@ -1,3 +1,188 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Banco Bar & Kitchen</title>
+    <link href="styles/normalize.css" rel="stylesheet">
+    <link href="scss/style.css" rel="stylesheet">
+</head>
+<body>
+<hr class="barre-top">
+<header>
 
+    <div>
+        <img alt="logo" height="110" src="img/logo.png" width="119"/>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Menus</a></li>
+            <li><a href="#">Book Now</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Gift Vouchers</a></li>
+            <li><a href="#">Online Order</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">FR</a></li>
+        </ul>
+    </nav>
+</header>
+<!--
+
+
+<section>
+    <div></div>
+    <article></article>
+    <div></div>
+    <article></article>
+</section>
+
+
+<hr>
+
+<section>
+    <iframe allowfullscreen=""
+            aria-hidden="false" frameborder="100" height="969"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2242.8410447979663!2d-4.3004972!3d55.795998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488847c0779e21b5%3A0xfe327e4c1088ec3d!2sBanco!5e0!3m2!1sen!2sca!4v1602793093230!5m2!1sen!2sca"
+            style="border:0;" tabindex="0"
+            width="1528"></iframe>
+
+    <article>
+        <h3>Titre</h3>
+        <h5>14-15 oct</h5>
+
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse egestas porttitor felis ac aliquet.
+            Etiam hendrerit tincidunt orci vitae sodales. Aenean nec velit viverra, tristique ante non, dictum lacus.
+            Vivamus eget vestibulum sem, viverra egestas erat. Proin id ex at magna porta tincidunt nec eget risus.
+            Donec eros eros, feugiat at vulputate eget, accumsan semper nisi. Quisque sed sollicitudin est, vel rhoncus
+            nunc. <br>
+
+            Phasellus eget libero sed ex lacinia elementum. Nullam dolor nibh, sagittis eget massa eget, auctor
+            elementum turpis. Suspendisse potenti. Vestibulum at iaculis tortor, dictum euismod erat. Vestibulum ante
+            ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed non purus nunc. Morbi imperdiet
+            euismod tellus eu dictum. Quisque dignissim neque in ante aliquet, vel molestie urna pulvinar. Phasellus ut
+            metus urna. Etiam sed turpis mi.</p>
+
+    </article>
+
+
+</section>
+
+-->
+<footer>
+
+    <section>
+        <h3>ABOUT US</h3>
+        <div>
+
+            <img alt="localization icon" height="27" src="img/address-icon.png" width="26"/>
+            <div>
+                <h4>Address</h4>
+                <p>Banco Glasgow <br>
+                    2 Mains Avenue<br>
+                    Giffnock<br>
+                    Glasgow<br>
+                    G46 6QY
+                </p>
+            </div>
+        </div>
+        <div class = aboutemail>
+            <img alt="email icon" height="26" src="img/email-icon.png" width="26"/>
+
+            <div>
+                <h4>Have any questions?</h4>
+
+                <a href="mailto:eat@bancoglasgow.com">eat@bancoglasgow.com</a>
+            </div>
+        </div>
+        <div>
+            <img alt="phone icon" height="26" src="img/phone-icon.png" width="26"/>
+
+            <div>
+                <h4>Phone number</h4>
+                <p>(0141)-620-0033</p>
+
+
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h3>FRESH TWEETS</h3>
+
+        <div>
+            <img alt="twitter icon" height="31" src="img/twitter-icon.png" width="38"/>
+
+            <div>
+                <h4>@bancoglasgow</h4>
+                <p>This Thursday 4th June, we'll be opening for take away and delivery.</p>
+                <p class="transparent">30 Mins Ago</p>
+            </div>
+        </div>
+
+        <div>
+            <img alt="twitter icon" height="31" src="img/twitter-icon.png" width="38"/>
+            <div>
+                <h4>@bancoglasgow</h4>
+                <p>This Thursday 4th June, we'll be opening for take away and delivery.</p>
+                <p class="transparent">6 Hours Ago</p>
+            </div>
+        </div>
+
+        <div>
+            <img alt="twitter icon" height="31" src="img/twitter-icon.png" width="38"/>
+            <div>
+                <h4>@bancoglasgow</h4>
+                <p>This Thursday 4th June, we'll be opening for take away and delivery.</p>
+                <p class="transparent">5 Days Ago</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h3>CONNECT WITH US</h3>
+
+
+        <label for="email">Sign up to our newsletter <br>
+            for the latest offers at Banco Glasgow</label>
+
+
+        <div>
+            <input id="email" pattern=".+@globex.com"
+                   required size="30" type="email">
+            <button type="button">Send</button>
+        </div>
+
+
+        <div class="links">
+            <a href=""><img height="38" src="img/facebook-link.png" width="38"/></a>
+            <a href=""><img height="38" src="img/twitter-link.png" width="38"/></a>
+            <a href=""><img height="38" src="img/instagram-link.png" width="38"/></a>
+            <a href=""><img height="38" src="img/google-link.png" width="38"/></a>
+        </div>
+    </section>
+
+</footer>
+
+</body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
